Closed Bug 1736370 Opened 3 years ago Closed 3 years ago

Tab icons often flicker/disappear when saving bookmark using dialog overlay

Categories

(Core :: DOM: Core & HTML, defect)

Firefox 95
defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 --- verified

People

(Reporter: ke5trel, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Maximize window and open several tabs on Ubuntu 21.04.
  2. Right-click a tab and choose Bookmark Tab.
  3. Save bookmark.
  4. Repeat several times.

The tab icons will sometimes flicker/disappear soon after the dialog overlay goes away. Moving the cursor over the tab strip makes them re-appear. Happens when using the Bookmark Tab/Link dialog overlay but not the bookmark star button in the address bar.

Affects both SW-WR and HW-WR.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0f89214c9ce49c5411b18c49a1e404761459f266&tochange=052cbf82beba8b764f9bfbcf3aa1bed342e898fe

Regressed by Bug 1733384.

Flags: needinfo?(emilio)

This is likely a bug in XUL layout, but this should restore the old
behavior and is the right thing to do.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Severity: -- → S3
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7eafd0a7d79a
Make inert use the union of the change hints of the properties it affects. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Flags: qe-verify+

Reproduced the issue with Firefox 95.0a1 (2021-10-18) on Ubuntu 21.04.
The issue is no longer reproducible with Firefox 95.0b3 on Ubuntu 21.04, macOS 10.15 and Windows 10x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: