Bug 1736370 - Make inert use the union of the change hints of the properties it affects. r=jwatt

This is likely a bug in XUL layout, but this should restore the old
behavior and is the right thing to do.

Differential Revision: https://phabricator.services.mozilla.com/D128746